Added Testing Branch to Pipelines

--- a/src/App/Pages/Authentication.razor
+++ b/src/App/Pages/Authentication.razor
@@ -26,10 +26,10 @@
 
     RemoteAuthenticationApplicationPathsOptions paths = new RemoteAuthenticationApplicationPathsOptions
     {
-        LogInPath = "/Account/Login",
-        LogOutPath = "/Account/Logout",
-        RemoteRegisterPath = "/Account/Register",
-        RemoteProfilePath = "/Account/Manage"
+        LogInPath           = "/Account/Login",
+        LogOutPath          = "/Account/Logout",
+        RemoteProfilePath   = "/Account/Manage",
+        RemoteRegisterPath  = "/Account/Register",
     };
 
     public async Task SignOutUser()
